<resources>
    <string name="app_name">Assign4 2019 karim Ouajjit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page_title">HOME</string>
    <string name="products_page_title">PRODUCTS</string>
    <string name="orders_page_title">ORDERS</string>
    <string name="collection_page_title">COLLECTION</string>

    <!-- TODO: Reference all the hardcode -->
    <string name="Enter_Your_Name">Enter Your Name</string>
    <string name="Take_photo_for_TShirt">Take photo </string>
    <string name="order_message_instructions">Delivery Address -or- For Collection</string>
    <string name="ready_time">Delivery/Collection in (days)</string>
    <string name="Send_Order">Send Order</string>

    <!--  TODO Creating the spinner items   -->

    <string-array name="ui_time_entries">
        <item>" 2"</item>
        <item>" 3"</item>
        <item>" 4"</item>
        <item>" 5"</item>
        <item>"10"</item>
        <item>"14"</item>
    </string-array>

    <!--   Creating List of collection points  -->

    <string name="store_swords">Available item on store Swords</string>
    <string name="swords_address">Address : Rail park Co.Dublin</string>
    <string name="swords_phone">Phone number : (01)63882619</string>

    <string name="store_dublin15">Available item on store dublin15</string>
    <string name="dublin15_address">Address : Business hotel Dublin15</string>
    <string name="dublin15_phone">Phone number : (01)15151515</string>

    <string name="store_dublin14">Available item on store dublin14</string>
    <string name="dublin14_address">Address : Mount Street Dublin14</string>
    <string name="dublin14_phone">Phone number : (01)14141414</string>

    <string name="store_dublin2">Available item on store dublin13</string>
    <string name="dublin2_address">Address : Redmond Street Dublin13</string>
    <string name="dublin2_phone">Phone number : (01)13731313</string>

    <string name="store_dublin1">Available item on store dublin1</string>
    <string name="dublin1_address">Address : Circular Rd Dublin1</string>
    <string name="dublin1_phone">Phone number : (01)11790181</string>

    <string name="store_dublin3">Available item on store dublin3</string>
    <string name="dublin3_address">Address : New Street 112 Dublin3</string>
    <string name="dublin3_phone">Phone number : (01)313131313</string>



    <!--   Creating List of home fragmnet  -->
    <string name="title_store">Online Games</string>

    <!--  TODO Creating the ListView items   -->
    <string-array name="products_items">
        <item>" Yoscki Game"</item>
        <item>" 3"</item>
        <item>" 4"</item>
        <item>" 5"</item>
        <item>"10"</item>
        <item>"14"</item>
    </string-array>

    <string name="image_confirm">Image saved successfully </string>
    <string name="notification_title">Notification!</string>
    <string name="customer_name">Name</string>
    <string name="order_message_1">Please find my order attached</string>
    <string name="order_collect_message">I will collect it in</string>
    <string name="order_end_message">Regards</string>
    <string name="customer_name_blank">You did not enter your name</string>
    <string name="to_email">my-tshirt@sda.ie</string>
    <string name="email_subject">Order Request</string>

</resources>
